# ProjectRocky

./: .env.example  README.md  pyproject.toml
scripts/: toggle_tapo_plug.py
src/print_ai_monitor/: __init__.py  cli.py  config.py  dedupe.py  logging_utils.py  service.py  tapo.py  web.py
src/print_ai_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
systemd/: print-ai-monitor.service
tests/: test_service.py  test_tapo.py  test_web.py
